Active Tools overlay shows up even if disabled #57139

Closed
opened 2018-10-10 11:57:42 +02:00 by Hjalti Hjálmarsson · 6 comments

System Information
Xbuntu / AMD

Blender Version
84cf670

Short description of error
In viewports with Active Tools disabled in overlay, it will still pop up when using it in another viewport

Exact steps for others to reproduce the error
New file
Use two viewports (lets just call them A and B)
In viewport B, go into Overlays and disable Active Tools
In viewport A, select an object and rotate it using the Active Tools
...and Active Tools overlay will pop up in viewport B...

Side note: this will also happen if you just disable Overlays completely

**System Information** Xbuntu / AMD **Blender Version** 84cf670 **Short description of error** In viewports with Active Tools disabled in overlay, it will still pop up when using it in another viewport **Exact steps for others to reproduce the error** New file Use two viewports (lets just call them A and B) In viewport B, go into Overlays and disable Active Tools In viewport A, select an object and rotate it using the Active Tools ...and Active Tools overlay will pop up in viewport B... Side note: this will also happen if you just disable Overlays completely

Added subscriber: @Hjalti

Added subscriber: @Hjalti

Added subscribers: @ideasman42, @brecht

Added subscribers: @ideasman42, @brecht
Campbell Barton was assigned by Brecht Van Lommel 2018-10-17 14:50:36 +02:00

I guess this refers not to the tool gizmo that you click on, but the stuff that is drawn while using the tool. To me it makes sense to hide that along with the tool gizmo, so you can see the character without obstruction. @ideasman42, is this intentional or an oversight?

I guess this refers not to the tool gizmo that you click on, but the stuff that is drawn while using the tool. To me it makes sense to hide that along with the tool gizmo, so you can see the character without obstruction. @ideasman42, is this intentional or an oversight?

This issue was referenced by blender/blender@fd42fe6616

This issue was referenced by blender/blender@fd42fe661612455c2d2558481c6587c0b7d95366

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Note that this was caused by additions to transform callback which don't use active-tool code, causing dial to be drawn even w/ overlays disabled.

It used to only draw the helpline in all views, but it's since had the dial added to it.
Now this checks and only draws in the active view when the gizmo is used.

Note that this was caused by additions to transform callback which don't use active-tool code, causing dial to be drawn even w/ overlays disabled. It used to only draw the helpline in all views, but it's since had the dial added to it. Now this checks and only draws in the active view when the gizmo is used.
Sign in to join this conversation.
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: studio/blender-studio#57139
No description provided.